# setup-environment-djpallax

./: .gitignore  CMakeLists.txt
include/: greetings.h
src/: main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
